<resources>
    <string name="application_version_name">"3.3 beta"</string>
    <string name="about_copyright">© 2017 B.Eng.Ghareeb Falazi</string>
    <string name="app_name">Ample SMS</string>
    <string name="about_version">Version</string>
    <string name="about_facebook"><a href="http://www.facebook.com/ample.sms.android/">Ample SMS on Facebook</a></string>
    <string name="about_visit_us">visit our Facebook page:</string>
    <string name="about_mobile">+49 157 53978953</string>
    <string name="action_message_part_delivered">ghareeb.smsplus.MessagePartDelivered</string>
    <string name="action_message_part_sent">ghareeb.smsplus.MessagePartSent</string>
    <string name="notification_title_delivered">Delivery report</string>
    <string name="notification_text_delivered">Message delivered to</string>
    <string name="notification_title_failed">Message not sent</string>
    <string name="notification_text_failed">Message failed to be sent to</string>
    <string name="notification_title_unread_messages">Unread messages</string>
    <string name="notification_text_unread_messages">unread messages</string>
    <string name="message_creation_enter_message_body">Enter message</string>
    <string name="message_creation_send_button">Send</string>
    <string name="message_creation_initial_message_count">0 / 0</string>
    <string name="message_creation_sending">Sending...</string>
    <string name="message_creation_error">An error has occurred</string>
    <string name="message_creation_recepient_hint">To</string>
    <string name="image_descriptor_contact">contact\'s photo</string>
    <string name="action_bar_main_create_new_sms">Compose New SMS</string>
    <string name="action_bar_create_new_sms_set_contact">Set Recipient</string>
    <string name="chat_failed">Failed</string>
    <string name="action_bar_title_compose">Compose</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_about">About</string>
    <string name="main_click_plus_to_start">Click on \'+\' above to start a conversation</string>
    <string name="main_draft">draft</string>
    <string name="contextual_menu_copy">Copy</string>
    <string name="contextual_menu_delete_message">Delete message</string>
    <string name="contextual_menu_delete_thread">Delete conversation</string>
    <string name="contextual_menu_show_message_details">Show message details</string>
    <string name="contextual_menu_resend">Resend</string>
    <string name="contextual_menu_call">Call</string>
    <string name="contextual_menu_viw">View contact</string>
    <string name="contact_not_found">Contact not found</string>
    <string name="pref_delivery_reports_title">Delivery reports</string>
    <string name="pref_delivery_reports_summary">Get notified when a delivery report is received</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_notifications_summary">Allow Ample SMS to notify you</string>
    <string name="pref_call_center_title">Call center</string>
    <string name="pref_call_center_summary">Specify the call center, leave this field empty to use the default call center</string>
    <string name="chat_message_details_title">Message details</string>
    <string name="chat_message_details_from">From:</string>
    <string name="chat_message_details_to">To:</string>
    <string name="chat_message_details_sent">Sent:</string>
    <string name="chat_message_details_received">Received:</string>
    <string name="chat_message_details_delivery_report_title">Delivery report:</string>
    <string name="chat_message_details_delivery_report_delivered">Received</string>
    <string name="chat_message_details_delivery_report_requested">Requested</string>
    <string name="chat_message_details_delivery_report_failed">Failed</string>
    <string name="chat_draft_saved">draft saved.</string>
    <string name="register_welcome">Welcome to Ample SMS,</string>
    <string name="register_registration_request">Enter your phone number without leading zeros:</string>
    <string name="register_hint_enter_phone_number">Mobile phone number</string>
    <string name="register_register">Register</string>
    <string name="register_registering">Registring...</string>
    <string name="register_ok_title">Registeration successful!</string>
    <string name="register_failed">Registration failed!</string>
    <string name="register_number_missing_invalid">Phone number is missing or is invalid</string>
    <string name="register_title">Ample SMS registration</string>
    <string name="register_please_wait">Please wait while the registration progresses.</string>
    <string name="register_verifying_number">Verifying phone number...</string>
    <string name="register_registering_number">Registering phone number...</string>
    <string name="register_retrieving_numbers">Retrieving Ample SMS contact list...</string>
    <string name="register_status">Status</string>
    <string name="register_verification_failed">Verification unsuccessful! Please check the number.</string>
    <string name="internet_fail">Failed to connect to server</string>
    <string name="recepient_from_device">From Device</string>
    <string name="recepient_refresh">Refresh</string>
    <string name="recepient_refreshing">Refreshing</string>
    <string name="recepient_title">Ample Contacts</string>
    <string name="recepient_no_contacts">None of your friends appears to use Ample SMS. Refresh this list or pick a contact from your device.</string>
    <string name="dialog_delete_message_title">Delete message?</string>
    <string name="dialog_delete_message_body">This message will be deleted permanently.</string>
    <string name="dialog_delete_button">Delete</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_delete_thread_title">Delete conversation?</string>
    <string name="dialog_delete_thread_body">All messages in this conversation will be deleted.</string>
    <string name="dialog_send_verification_title">Do you want to proceed?</string>
    <string name="dialog_send_verification_body">This will cost you a single local SMS.</string>
    <string name="dialog_yes">Yes</string>
    <string name="notification_new_contacts_title">New Ample SMS contacts</string>
    <string name="notification_new_contacts_body">New contacts have joined Ample SMS</string>
    <string name="pref_notifications_category">Notifications</string>
    <string name="pref_new_contacts_summary">Get notified when new contacts join Ample SMS</string>
    <string name="pref_call_center_category">Call center</string>
    <string name="toast_number_not_registered">Phone number is not registered</string>
    <string name="statistics_total_savings_title">Total savings</string>
    <string name="statistics_messages">messages</string>
    <string name="statistics_smss">sms\'s</string>
    <string name="statistics_sent_messages">Sent messages</string>
    <string name="statistics_received_messages">Received messages</string>
    <string name="statistics_processing">Processing…</string>
    <string name="action_bar_statistics">Statistics</string>
    <string name="action_bar_title_statistics">Statistics</string>
    <string name="savings_description" formatted="false">You have sent (%d) sms\'s using Ample SMS since (%s).\n\nYou would have sent (%d) sms\'s if you had used an ordinary app.\n\nTotal savings (%d) sms\'s.\n</string>
    <string name="dialog_savings_details_title">Savings details</string>
    <string name="date_error_title">Clock Error</string>
    <string name="date_error_description">Ample SMS has detected that your clock is incorrect. Correct it and try again.\nIf you\'re sure the clock is correct, check it online.</string>
    <string name="date_error_check_settings_button_text">clock settings</string>
    <string name="date_error_check_online">check online</string>
    <string name="date_error_toast_checking_online">Checking clock...</string>
    <string name="date_error_toast_clock_invalid">Clock is incorrect!</string>
    <string name="date_error_toast_clock_valid">Clock is correct</string>
    <string name="pref_ring_tone_title">Ringtone</string>
    <string name="pref_ring_tone_silence">Silent</string>
    <string name="pref_new_contact_title">New Ample SMS contacts</string>
    <string name="register_verifying_internet_connection">Verifying Internet connection...</string>
    <string name="dialog_no_internet_title">No Internet connection</string>
    <string name="dialog_no_internet_body">Registration requires an active Internet connection.</string>
    <string name="ok">OK</string>
    <string name="toast_preparing_database">preparing for first use...</string>
    <string name="register_ok_description">Registration has succeeded.</string>
    <string name="subscription_expired_description">Your subscription has expired. You can only receive messages.</string>
    <string name="subscription_expired_title">Subscription expired!</string>
    <string name="subscription_remaining_days" formatted="false">Your subscription will expire in %d days.</string>
</resources>