<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item
        android:id="@+id/resend"
        android:title="@string/contextual_menu_resend"
        android:titleCondensed="@string/contextual_menu_resend">
    </item>
    <item
        android:id="@+id/copy"
        android:title="@string/contextual_menu_copy"
        android:titleCondensed="@string/contextual_menu_copy">
    </item>
    <item
        android:id="@+id/delete"
        android:title="@string/contextual_menu_delete_message"
        android:titleCondensed="@string/contextual_menu_delete_message">
    </item>
        <item
        android:id="@+id/showDetails"
        android:title="@string/contextual_menu_show_message_details"
        android:titleCondensed="@string/contextual_menu_show_message_details">
    </item>

</menu>
