<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/register_welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/requestTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/welcomeTV"
        android:layout_marginTop="7dp"
        android:text="@string/register_registration_request"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/countryCodesSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/requestTV"
        android:layout_marginTop="3dp" />

    <EditText
        android:id="@+id/phoneNumberET"
        style="@style/WhiteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/countryCodesSpinner"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/register_hint_enter_phone_number"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/registerB"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumberET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/register_register" />

</RelativeLayout>