<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/statisticsSV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/statsIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_stats" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statsIV"
                android:layout_centerHorizontal="true"
                android:text="@string/action_bar_title_statistics"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView7"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="7dp"
                android:text="@string/statistics_total_savings_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/helpIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView1"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/textView1"
                android:src="@drawable/ic_help" />

            <TextView
                android:id="@+id/totalSavingsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_active_android_blue" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/totalSavingsTV"
                android:layout_toRightOf="@+id/totalSavingsTV"
                android:text="@string/statistics_smss"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_active_android_blue" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/totalSavingsTV"
                android:layout_marginBottom="2dp"
                android:text="@string/statistics_sent_messages"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/totalSentMessagesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_active_android_blue" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/totalSentMessagesTV"
                android:layout_toRightOf="@+id/totalSentMessagesTV"
                android:text="@string/statistics_messages"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_active_android_blue" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/totalSentMessagesTV"
                android:layout_marginBottom="2dp"
                android:text="@string/statistics_received_messages"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/totalReceivedMessagesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView5"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_active_android_blue" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/totalReceivedMessagesTV"
                android:layout_toRightOf="@+id/totalReceivedMessagesTV"
                android:text="@string/statistics_messages"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_active_android_blue" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>